--- a/.github/workflows/build-loader.yaml
+++ b/.github/workflows/build-loader.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/login-action@v3
         if: github.event_name != 'pull_request'
         with:
-          username: OxydeCloud
+          username: oxydecloud
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Docker Metadata
