Fixed missing semi-colon

--- a/alpine3.22/Dockerfile
+++ b/alpine3.22/Dockerfile
@@ -29,5 +29,5 @@ RUN set -eux; \
     rustup --version; \
     cargo --version; \
     rustc --version; \
-    rustup target add wasm32-unknown-unknown \
+    rustup target add wasm32-unknown-unknown; \
     cargo install cargo-leptos --locked
