Missing packages for alpine

--- a/alpine3.22/Dockerfile
+++ b/alpine3.22/Dockerfile
@@ -6,8 +6,8 @@ RUN apk add --no-cache \
         ca-certificates \
         gcc \
         musl-dev \
-        openssl \
-        perl
+        perl \
+        make
 
 ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
