--- a/.github/workflows/build-loader.yaml
+++ b/.github/workflows/build-loader.yaml
@@ -21,23 +21,29 @@ jobs:
       matrix:
         include:
           #VERSIONS
-          - name: ubuntu-24.04
+          - name: ubuntu-24.04-amd64
             context: ubuntu/24.04
-            platforms: linux/amd64,linux/arm64
+            platforms: linux/amd64
             tags: |
               ubuntu
               24.04
               noble
-          - name: debian-13
-            context: debian/13
-            platforms: linux/amd64,linux/arm64
+          - name: ubuntu-24.04-arm64
+            context: ubuntu/24.04
+            platforms: linux/arm64
             tags: |
-              debian
-              13
-              trixie
-          - name: alpine-3.22
+              ubuntu
+              24.04
+              noble
+          - name: alpine-3.22-amd64
             context: alpine/3.22
-            platforms: linux/amd64,linux/arm64
+            platforms: linux/amd64
+            tags: |
+              alpine
+              3.22
+          - name: alpine-3.22-arm64
+            context: alpine/3.22
+            platforms: linux/arm64
             tags: |
               alpine
               3.22
